--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-autoprefixer": "^4.0.0",
     "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rigger": "^0.5.8",
     "gulp-sass": "^3.1.0",
     "gulp-spritesmith": "0.0.2",
     "rimraf": "^2.6.1",
