--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^3.1.0",
     "gulp-spritesmith": "0.0.2",
+    "gulp-uglify": "^3.0.0",
     "rimraf": "^2.6.1",
     "spritesmith": "^3.1.1"
   },
